google map url update

--- a/_includes/contactinfo.html
+++ b/_includes/contactinfo.html
@@ -9,10 +9,10 @@
     </tr>
     <tr>
         <td>Location:</td>
-        <td><a href="https://www.google.com/maps?q=3388+Six+Forks+Road,+Raleigh,+NC+27609">3388 Six Forks Road</a></td>
+        <td><a href="{{site.googleMapUrl}}">3388 Six Forks Road</a></td>
     </tr>
     <tr>
         <td></td>
-        <td><a href="https://www.google.com/maps?q=3388+Six+Forks+Road,+Raleigh,+NC+27609">Raleigh, NC 27609</a></td>
+        <td><a href="{{site.googleMapUrl}}">Raleigh, NC 27609</a></td>
     </tr>
 </table>
