add /patientinfo link to mobile menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,13 +11,13 @@
       {% include footer.html %}
     </div>
 
-    <div class="sidebar">
+    <div class="mobile-sidebar">
       <ul>
         <li><a href="{{site.baseurl}}/">Home</a></li>
         <li><a href="{{site.baseurl}}/aboutus">About Us</a></li>
-        <!-- <li><a href="{{site.baseurl}}/dentalcare">Dental Care</a>
+        <!-- <li><a href="{{site.baseurl}}/dentalcare">Dental Care</a> -->
         <li><a href="{{site.baseurl}}/patientinfo">Patient Information</a></li>
-        <li><a href="{{site.baseurl}}/blog">Blog</a></li> -->
+        <!-- <li><a href="{{site.baseurl}}/blog">Blog</a></li> -->
         <li><a href="{{site.baseurl}}/contactus">Contact Us</a></li>
         <li><a href="{{site.baseurl}}/request-appointment">Request Appt</a></li>
       </ul>
