--- a/_includes/header.html
+++ b/_includes/header.html
@@ -42,4 +42,18 @@
         <li><a class={% if page.category contains "contactus" %}"selected"{% else %}"allowhover"{% endif %} href="{{site.baseurl}}/contactus">Contact Us</a></li>
       </ul>
   </nav>
+
+        <!-- Holiday / Closure Section -->
+        <h5>
+          <font color=red>
+            We will be closed the following days for the Thanksgiving holiday:
+            <ul>
+              <li>Thursday, November 23, 2017</li>
+              <li>Friday, November 24, 2017 </li>
+              <li>Monday, November 27, 2017</li>
+            </ul>  
+            We will re-open Tuesday, November 28, 2017. We apologize for the inconvenience. The best way to contact us during this time is via e-mail: <a href="mailto:quyenchangdds@gmail.com">quyenchangdds@gmail.com</a>. We hope you have a Happy Thanksgiving!</li>
+          </font>
+        </h5>
+
 </header>
