--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,7 +43,7 @@
       </ul>
   </nav>
 
-        <!-- Holiday / Closure Section -->
+       <!-- Holiday / Closure Section 
         <h5>
           <font color=red>
             We will be closed the following days for the Thanksgiving holiday:
@@ -55,5 +55,6 @@
             We will re-open Tuesday, November 28, 2017. We apologize for the inconvenience. The best way to contact us during this time is via e-mail: <a href="mailto:quyenchangdds@gmail.com">quyenchangdds@gmail.com</a>. We hope you have a Happy Thanksgiving!</li>
           </font>
         </h5>
+       -->
 
 </header>
