--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,18 +43,20 @@
       </ul>
   </nav>
 
-       <!-- Holiday / Closure Section 
+       <!-- Holiday / Closure Section -->
         <h5>
           <font color=red>
-            We will be closed the following days for the Thanksgiving holiday:
+            We will be closed from Monday, July 16, 2018 to Monday, July 23, 2018.
+            <!--
             <ul>
               <li>Thursday, November 23, 2017</li>
               <li>Friday, November 24, 2017 </li>
               <li>Monday, November 27, 2017</li>
             </ul>  
-            We will re-open Tuesday, November 28, 2017. We apologize for the inconvenience. The best way to contact us during this time is via e-mail: <a href="mailto:quyenchangdds@gmail.com">quyenchangdds@gmail.com</a>. We hope you have a Happy Thanksgiving!</li>
+            -->
+            We will re-open Tuesday, July 24, 2018. We apologize for the inconvenience. The best way to contact us during this time is via e-mail: <a href="mailto:quyenchangdds@gmail.com">quyenchangdds@gmail.com</a>, or you can call us at <a href="tel:19197836551">919-783-6551</a> and leave a message - we will check them periodically.</li>
           </font>
         </h5>
-       -->
+<!--       -->
 
 </header>
