--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,18 +44,16 @@
   </nav>
 
        <!-- Holiday / Closure Section -->
-        <h5>
-          <font color=red>
+        <h5 class="alert">
             We will be closed from Monday, July 16, 2018 to Monday, July 23, 2018.
             <!--
             <ul>
               <li>Thursday, November 23, 2017</li>
               <li>Friday, November 24, 2017 </li>
               <li>Monday, November 27, 2017</li>
-            </ul>  
+            </ul>
             -->
             We will re-open Tuesday, July 24, 2018. We apologize for the inconvenience. The best way to contact us during this time is via e-mail: <a href="mailto:quyenchangdds@gmail.com">quyenchangdds@gmail.com</a>, or you can call us at <a href="tel:19197836551">919-783-6551</a> and leave a message - we will check them periodically.</li>
-          </font>
         </h5>
 <!--       -->
 
