--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -2,6 +2,10 @@
 header {
   padding-top: em(30);
   font-family: roboto;
+  .alert {
+    color: red;
+    background-color: pink;
+  }
 }
 header .header-banner {
   margin-bottom: em(20);
