add closure alert for hurricane florence

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,9 +43,10 @@
       </ul>
   </nav>
 
-  {% comment %}
     <!-- Holiday / Closure Section -->
     <h5 class="alert">
+      We will be closing at 12 PM on Thursday, September 13, 2018 and will close all day Friday, September 14, 2018 due to Hurricane Florence. We apologize for the inconvenience, and hope everyone stays safe.
+      {% comment %}
         We will be closed from Monday, July 16, 2018 to Monday, July 23, 2018.
         <!--
         <ul>
@@ -55,7 +56,7 @@
         </ul>
         -->
         We will re-open Tuesday, July 24, 2018. We apologize for the inconvenience. The best way to contact us during this time is via e-mail: <a href="mailto:quyenchangdds@gmail.com">quyenchangdds@gmail.com</a>, or you can call us at <a href="tel:19197836551">919-783-6551</a> and leave a message - we will check them periodically.</li>
+      {% endcomment %}
     </h5>
-  {% endcomment %}
 
 </header>
