config+update email
to update the email:
1. goto _config.yml, change the email value there,
2. also goto contact-form-handler.php, change the email value there

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -55,7 +55,7 @@
           <li>Monday, November 27, 2017</li>
         </ul>
         -->
-      We will re-open Tuesday, July 24, 2018. We apologize for the inconvenience. The best way to contact us during this time is via e-mail: <a href="mailto:quyenchangdds@gmail.com">quyenchangdds@gmail.com</a>, or you can call us at <a href="tel:19197836551">919-783-6551</a> and leave a message - we will check them periodically.</li>
+      We will re-open Tuesday, July 24, 2018. We apologize for the inconvenience. The best way to contact us during this time is via e-mail: <a href="mailto:{{site.email}}">{{site.email}}</a>, or you can call us at <a href="tel:19197836551">919-783-6551</a> and leave a message - we will check them periodically.</li>
     </h5>
     {% endcomment %}
 
