--- a/_includes/contactinfo.html
+++ b/_includes/contactinfo.html
@@ -6,7 +6,7 @@
     </tr>
     <tr class="email">
         <td>Email:</td>
-        <td><a href="mailto:quyenchangdds@gmail.com">quyenchangdds@gmail.com</a></td>
+        <td><a href="mailto:{{site.email}}">{{site.email}}</a></td>
     </tr>
     <tr>
         <td>Location:</td>
