add covid-19 reopen blog post

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -48,4 +48,6 @@
     {% include alerts/thanksgiving.html %}
     {% include alerts/covid19.html %}
   {% endcomment %}
+
+  {% include alerts/covid19-reopen.html %}
 </header>
