--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -2,7 +2,7 @@
 header {
   padding-top: em(30);
   font-family: roboto;
-  .alert {
+  .alert-red {
     color: red;
     background-color: pink;
   }
