--- a/_sass/_blog.scss
+++ b/_sass/_blog.scss
@@ -18,3 +18,17 @@
     }
   }
 }
+
+
+// -------------------------------------------------------------------------
+// --- mq blog css
+// -------------------------------------------------------------------------
+
+@media only screen and (max-width:$mqMaxMobile) {
+  .blog-content .page-nav {
+    display: none;
+  }
+  .blog-content .page-content {
+    margin: 0 em(10);
+  }
+}
