--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,7 +1,7 @@
 // variables/functions
 $basefont: 14;
 @function em($target, $context: $basefont) {
-	@return ($target / $context) * 1em;
+  @return ($target / $context) * 1em;
 }
 
 $mqMaxMobile: ((491 / 16) + 0em);
@@ -23,12 +23,12 @@ body {
   position: relative;
 }
 a, a:hover {
-	text-decoration: none;
+  text-decoration: none;
 }
 button.schedule-btn {
-	background-color: $orange;
+  background-color: $orange;
   color: white;
-	font-weight: 300;
+  font-weight: 300;
   border: none;
   border-radius: 4px;
   padding: 20px;
@@ -44,28 +44,28 @@ button.schedule-btn {
 .page-nav {
   float: left;
   width: em(245);
-	h1 {
-	  font-size: em(32);
-	  font-family: calendas;
-	  font-weight: 100;
-	  margin: em(16,32) 0px em(24,32) 0px;
-	}
-	section {
-	  font-family: roboto;
-		h2 {
-		  color: $blue;
-		  font-weight: 300;
-		  font-size: em(15);
-		}
-		// ul element used on DentalCare/Blog pages
-		ul {
-		  padding-left: em(24);
-			li {
-			  list-style-type: none;
-			  padding-bottom: em(18);
-			}
-		}
-	}
+  h1 {
+    font-size: em(32);
+    font-family: calendas;
+    font-weight: 100;
+    margin: em(16,32) 0px em(24,32) 0px;
+  }
+  section {
+    font-family: roboto;
+    h2 {
+      color: $blue;
+      font-weight: 300;
+      font-size: em(15);
+    }
+    // ul element used on DentalCare/Blog pages
+    ul {
+      padding-left: em(24);
+      li {
+        list-style-type: none;
+        padding-bottom: em(18);
+      }
+    }
+  }
 }
 
 /* css for fixed nav bar */
@@ -83,17 +83,17 @@ button.schedule-btn {
 .page-content {
   margin-left: em(245);
   font-family: roboto;
-	h1 {
-	  font-size: em(24);
-	  font-weight: 300;
-	  color: $blue;
-	}
-	figure {
-	  margin: 0px;
-		img {
-		  padding-top: em(8);
-		}
-	}
+  h1 {
+    font-size: em(24);
+    font-weight: 300;
+    color: $blue;
+  }
+  figure {
+    margin: 0px;
+    img {
+      padding-top: em(8);
+    }
+  }
 }
 
 
@@ -101,18 +101,17 @@ button.schedule-btn {
 // -------------------------------------------------------------------------
 // --- mq base css
 // -------------------------------------------------------------------------
-
 @media only screen and (max-width:$mqMaxMobile) {
   .site-margin {
     width: 100%;
   }
-	html, body, .main-window {
-		min-height: 100vh;
-	}
-	body .main-window {
-		position: fixed;
-	}
-	img {
-		max-width: 100%;
-	}
+  html, body, .main-window {
+    min-height: 100vh;
+    .site-content {
+      padding-bottom: em(250); // add page bottom buffer, since no footer
+    }
+  }
+  img {
+    max-width: 100%;
+  }
 }
