fix: update thanksgiving 2020 header message

--- a/_includes/alerts/thanksgiving.html
+++ b/_includes/alerts/thanksgiving.html
@@ -1,12 +1,16 @@
-<h5 class="alert alert-red">
-  We will be closing at 12 PM on Thursday, September 13, 2018 and will close all day Friday, September 14, 2018 due to Hurricane Florence. We apologize for the inconvenience, and hope everyone stays safe.
-  We will be closed from Monday, July 16, 2018 to Monday, July 23, 2018.
-    <!--
-    <ul>
-      <li>Thursday, November 23, 2017</li>
-      <li>Friday, November 24, 2017 </li>
-      <li>Monday, November 27, 2017</li>
-    </ul>
-    -->
-  We will re-open Tuesday, July 24, 2018. We apologize for the inconvenience. The best way to contact us during this time is via e-mail: <a href="mailto:{{site.email}}">{{site.email}}</a>, or you can call us at <a href="tel:19197836551">919-783-6551</a> and leave a message - we will check them periodically.</li>
+<h5 class="alert alert-info">
+  We will be closed the following days for the Thanksgiving holiday:
+  <ul style="padding: 10px 40px;">
+    <li>Wednesday, November 25, 2020</li>
+    <li>Thursday, November 26, 2020</li>
+    <li>Friday, November 27, 2020 </li>
+    <li>Monday, November 30, 2020</li>
+  </ul>
+  We will re-open Tuesday, December 1, 2020.
+  <p>
+  The best way to contact us during this time is via e-mail: <a href="mailto:quyenchangdds@gmail.com">quyenchangdds@gmail.com</a>.
+  </p>
+  <p>
+  We hope you have a Happy Thanksgiving!
+  </p>
 </h5>
