--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,5 +49,6 @@
     {% include alerts/covid19.html %}
   {% endcomment %}
 
+  {% include alerts/thanksgiving.html %}
   {% include alerts/covid19-reopen.html %}
 </header>
