fix: update info email

--- a/_includes/alerts/thanksgiving.html
+++ b/_includes/alerts/thanksgiving.html
@@ -8,7 +8,7 @@
   </ul>
   We will re-open Tuesday, December 1, 2020.
   <p>
-  The best way to contact us during this time is via e-mail: <a href="mailto:quyenchangdds@gmail.com">quyenchangdds@gmail.com</a>.
+  The best way to contact us during this time is via e-mail: <a href="mailto:{{site.email}}">{{site.email}}</a>.
   </p>
   <p>
   We hope you have a Happy Thanksgiving!
