--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,6 +49,6 @@
     {% include alerts/covid19.html %}
   {% endcomment %}
 
-  {% include alerts/thanksgiving.html %}
+  {% include alerts/christmas.html %}
   {% include alerts/covid19-reopen.html %}
 </header>
