fix: add july 4th message

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,5 +50,6 @@
     {% include alerts/christmas.html %}
   {% endcomment %}
 
+  {% include alerts/july4.html %}
   {% include alerts/covid19-reopen.html %}
 </header>
