fix: abstract phone # into config

--- a/_includes/contactinfo.html
+++ b/_includes/contactinfo.html
@@ -2,7 +2,7 @@
 <table>
     <tr>
         <td>Phone:</td>
-        <td><a href="tel:919-783-6551">(919) 783-6551</a></td>
+        <td><a href="tel:919-783-6551">{{site.phone}}</a></td>
     </tr>
     <tr class="email">
         <td>Email:</td>
