--- a/_includes/form.html
+++ b/_includes/form.html
@@ -34,7 +34,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <p>Please note this form is only for requesting an appointment. If you need to cancel or reschedule an existing appointment, or if this is an emergency, please contact our office directly by calling (919) 783-6551.</p>
+        <p>Please note this form is only for requesting an appointment. If you need to cancel or reschedule an existing appointment, or if this is an emergency, please contact our office directly by calling {{site.phone}}.</p>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary" id="apptForm-send-btn">Send message</button>
       </div>
