--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
               <span>Find Us <span class="icon icon-location"><img src="{{site.baseurl}}/img/icon_header_location.png" alt="location icon"></span></span>
             </a>
             <span class="separator">|</span>
-            <span>Call us at <span class="number"><a href="tel:919-783-6551">(919) 783-6551</a></span></span>
+            <span>Call us at <span class="number"><a href="tel:919-783-6551">{{site.phone}}</a></span></span>
           </div>
           <button class="schedule-btn" name="schedule-btn-header">Schedule an Appointment</button>
       </div>
