--- a/_includes/alerts/thanksgiving.html
+++ b/_includes/alerts/thanksgiving.html
@@ -1,12 +1,11 @@
 <h5 class="alert alert-info">
   We will be closed the following days for the Thanksgiving holiday:
   <ul style="padding: 10px 40px;">
-    <li>Wednesday, November 25, 2020</li>
-    <li>Thursday, November 26, 2020</li>
-    <li>Friday, November 27, 2020 </li>
-    <li>Monday, November 30, 2020</li>
+    <li>Wednesday, November 24, 2021</li>
+    <li>Thursday, November 25</li>
+    <li>Friday, November 26</li>
   </ul>
-  We will re-open Tuesday, December 1, 2020.
+  We will re-open Monday, November 29.
   <p>
   The best way to contact us during this time is via e-mail: <a href="mailto:{{site.email}}">{{site.email}}</a>.
   </p>
