--- a/_includes/alerts/thanksgiving.html
+++ b/_includes/alerts/thanksgiving.html
@@ -4,8 +4,9 @@
     <li>Wednesday, November 24, 2021</li>
     <li>Thursday, November 25</li>
     <li>Friday, November 26</li>
+    <li>Monday, November 29</li>
   </ul>
-  We will re-open Monday, November 29.
+  We will re-open Tuesday, November 30.
   <p>
   The best way to contact us during this time is via e-mail: <a href="mailto:{{site.email}}">{{site.email}}</a>.
   </p>
