--- a/_layouts/dentalcare.html
+++ b/_layouts/dentalcare.html
@@ -27,7 +27,7 @@
       {{ content }}
     </section>
     {% include footer.html %}
-    {% include form.html %}
+    {% include modal-form.html %}
     {% include jssrc.html %}
   </body>
 </html>
