--- a/_includes/modal-form.html
+++ b/_includes/modal-form.html
@@ -19,7 +19,7 @@
           </div>
           <div class="form-group">
             <label for="contact-number" class="control-label">Phone Number:</label>
-            <input type="tel" class="form-control" id="contact-number" name="number" data-error="Please fill in your phone number" required>
+            <input type="tel" class="form-control" id="contact-number" name="number" data-minlength="10" data-error="Please fill in your phone number" required>
             <div class="help-block with-errors"></div>
           </div>
           <div class="form-group">
@@ -30,11 +30,14 @@
           <div class="form-group">
             <label for="contact-message" class="control-label">Additional Comments:</label>
             <textarea class="form-control" id="contact-message" name="message"></textarea>
+            <input type="text" class="visuallyhidden" id="captcha-token" name="token" data-validate="true" data-minlength="10" data-error="Please fill in your token" required>
           </div>
         </form>
       </div>
       <div class="modal-footer">
         <p>Please note this form is only for requesting an appointment. If you need to cancel or reschedule an existing appointment, or if this is an emergency, please contact our office directly by calling {{site.phone}}.</p>
+        <div id="g-recaptcha-container" class="g-recaptcha"></div>
+        <p id="captcha-instruction" class="visuallyhidden">Please verify Captcha</p>
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
         <button type="button" class="btn btn-primary" id="apptForm-send-btn">Send message</button>
       </div>
