fix: christmas 2021 closure dates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,5 +51,6 @@
     {% include alerts/july4.html %}
   {% endcomment %}
 
+  {% include alerts/christmas_2021.html %}
   {% include alerts/covid19-reopen.html %}
 </header>
