fix: June 2022 closure dates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -52,5 +52,6 @@
     {% include alerts/july4.html %}
   {% endcomment %}
 
+  {% include alerts/2022_june.html %}
   {% include alerts/covid19-reopen.html %}
 </header>
