feat: 2023 thanksgiving dates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,7 @@
   </nav>
 
   <!-- Holiday / Closure Section -->
+  {% include alerts/thanksgiving_2023.html %}
   {% comment %}
     {% include alerts/covid19.html %}
     {% include alerts/thanksgiving.html %}
