fix: 2023 year end dates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,8 @@
   </nav>
 
   <!-- Holiday / Closure Section -->
+  {% include alerts/christmas_2023.html %}
+
   {% comment %}
     {% include alerts/covid19.html %}
     {% include alerts/thanksgiving.html %}
