--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,6 +44,7 @@
   </nav>
 
   <!-- Holiday / Closure Section -->
+  {% include alerts/may_2024.html %}
 
   {% comment %}
     {% include alerts/covid19.html %}
