update: disable Veneers content

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,9 @@
                     <li><a href="{{site.baseurl}}/dentalcare/extractions/">Extractions</a></li>
                     <li><a href="{{site.baseurl}}/dentalcare/nightguards/">Nightguards</a></li>
                     <li><a href="{{site.baseurl}}/dentalcare/bleaching/">Bleaching</a></li>
+                    {% comment %}
                     <li><a href="{{site.baseurl}}/dentalcare/veneers/">Veneers</a></li>
+                    {% endcomment %}
                 </ul>
             </div>
         </li>
