--- a/_layouts/dentalcare.html
+++ b/_layouts/dentalcare.html
@@ -20,7 +20,9 @@
             <li><a {% if page.care contains "extractions" %}class="selected"{% endif %} href="{{site.baseurl}}/dentalcare/extractions/">Extractions</a></li>
             <li><a {% if page.care contains "nightguards" %}class="selected"{% endif %} href="{{site.baseurl}}/dentalcare/nightguards/">Nightguards</a></li>
             <li><a {% if page.care contains "bleaching" %}class="selected"{% endif %} href="{{site.baseurl}}/dentalcare/bleaching/">Bleaching</a></li>
+            {% comment %}
             <li><a {% if page.care contains "veneers" %}class="selected"{% endif %} href="{{site.baseurl}}/dentalcare/veneers/">Veneers</a></li>
+            {% endcomment %}
           </ul>
         </section>
       </nav>
