update: add OOTO msg

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,6 +46,7 @@
   </nav>
 
   <!-- Holiday / Closure Section -->
+  {% include alerts/OOTO.html %}
 
   {% comment %}
     {% include alerts/covid19.html %}
