--- a/_includes/header.html
+++ b/_includes/header.html
@@ -45,10 +45,12 @@
       </ul>
   </nav>
 
-  <!-- Holiday / Closure Section -->
-  {% include alerts/OOTO.html %}
+  <!-- Holiday / Closure Section --- START -->
+
+  <!-- Holiday / Closure Section --- END -->
 
   {% comment %}
+    {% include alerts/OOTO.html %}
     {% include alerts/covid19.html %}
     {% include alerts/thanksgiving.html %}
     {% include alerts/thanksgiving_2023.html %}
