feat: 2024 Dec holiday dates

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -46,7 +46,7 @@
   </nav>
 
   <!-- Holiday / Closure Section --- START -->
-
+  {% include alerts/christmas_2024.html %}
   <!-- Holiday / Closure Section --- END -->
 
   {% comment %}
