Update _includes\footer, \header
-Footer: Remove G+, Twitter
-Header: Changed from Quyen to Timothy

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,14 +15,14 @@
             <ul>
                 <li><a href="https://www.facebook.com/pages/Quyen-D-Chang-DDS/718694151609466">
                     <span class="icon"><img src="{{site.baseurl}}/img/social-icon/facebook.png" alt="facebook icon"></span>Facebook</a></li>
-                <li><a href="https://plus.google.com/+QuyenChangFamilyDentistryRaleigh">
-                    <span class="icon"><img src="{{site.baseurl}}/img/social-icon/googleplus.png" alt="google plus icon"></span>Google +</a></li>
+                <!-- <li><a href="https://plus.google.com/+QuyenChangFamilyDentistryRaleigh">
+                    <span class="icon"><img src="{{site.baseurl}}/img/social-icon/googleplus.png" alt="google plus icon"></span>Google +</a></li> -->
                 <li><a href="https://instagram.com/quyenchangdds/">
                     <span class="icon"><img src="{{site.baseurl}}/img/social-icon/instagram.png" alt="instagram icon"></span>Instagram</a></li>
                 <li><a href="http://youtube.com/QuyenChangFamilyDentistryRaleigh">
                     <span class="icon"><img src="{{site.baseurl}}/img/social-icon/youtube.png" alt="youtube icon"></span>Youtube</a></li>
-                <li><a href="https://twitter.com/quyenchangdds">
-                    <span class="icon"><img src="{{site.baseurl}}/img/social-icon/twitter.png" alt="twitter icon"></span>Twitter</a></li>
+                <!-- <li><a href="https://twitter.com/quyenchangdds">
+                    <span class="icon"><img src="{{site.baseurl}}/img/social-icon/twitter.png" alt="twitter icon"></span>Twitter</a></li> -->
             </ul>
         </section>
         <section class="footer-section footer-contact-info">
