--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-margin">
   <div class="header-banner">
       <figure>
-        <div class="mobile-header-title">Quyen D. Chang, DDS</div>
+        <div class="mobile-header-title">Timothy C. Chang, DDS</div>
         <a href="{{site.baseurl}}/"><img src="{{site.baseurl}}/img/icon_header_logo.png" alt="logo banner"></a>
       </figure>
       <div class="header-action-call">
