--- a/_includes/alerts/thanksgiving.html
+++ b/_includes/alerts/thanksgiving.html
@@ -1,16 +1,5 @@
-<h5 class="alert alert-info">
-  We will be closed the following days for the Thanksgiving holiday:
-  <ul style="padding: 10px 40px;">
-    <li>Wednesday, November 23, 2022</li>
-    <li>Thursday, November 24</li>
-    <li>Friday, November 25</li>
-    <li>Monday, November 28</li>
-  </ul>
-  We will re-open Tuesday, November 29.
-  <p>
-  The best way to contact us during this time is via e-mail: <a href="mailto:{{site.email}}">{{site.email}}</a>.
-  </p>
-  <p>
-  We hope you have a Happy Thanksgiving!
-  </p>
+<h5 class="alert alert-red">
+  <p>Our office will be closed from November 26 to November 30 for the Thanksgiving holiday.</p>
+  <p>If you have a dental emergency and need to be seen during those times, please leave a voicemail message at <a href="tel:{{site.phoneRaw}}">{{site.phone}}</a> or email us at <a href="mailto:{{site.email}}">{{site.email}}</a>.</p>
+  <p>We will be checking those daily. Thank you!</p>
 </h5>
